Fix:Updated spacing of items in home view

--- a/src/components/SelectSwitch/_VentModeSelector.scss
+++ b/src/components/SelectSwitch/_VentModeSelector.scss
@@ -1,4 +1,4 @@
-.svg-container {
+.VentModeSelector {
   width: 30vmin;   // 30% of the viewport's smaller dimension
   height: 30vmin;  // maintain a square container
   display: flex;
