--- a/src/views/HomeView/HomeView.scss
+++ b/src/views/HomeView/HomeView.scss
@@ -4,34 +4,32 @@
   flex-direction: row;
   width: 100%;
   height: 100%;
-
-  // Prevent any unwanted spacing
   margin: 0;
   padding: 0;
+  justify-content: center;
+  align-items: center;
+  gap: 1rem;
 }
 
-/* Left panel - 25% width */
 .home-view__left {
-  width: 25%;
+  width: 100%;
   height: 100%;
   display: flex;
   align-items: center;
   justify-content: center;
 }
 
-/* Middle panel - 50% width */
 .home-view__middle {
-  width: 50%;
   height: 100%;
   display: flex;
   align-items: center;
   justify-content: center;
 }
 
-/* Right panel - 25% width */
+
 .home-view__right {
-  width: 25%;
   height: 100%;
+  width: 100%;
   display: flex;
   align-items: center;
   justify-content: center;
